<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="#FDE6E6"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_text"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnImageLeft"
                android:layout_width="wrap_content"
                android:layout_height="147dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

            <ImageView
                android:id="@+id/txtReviewBox"
                android:layout_width="0dp"
                android:layout_height="147dp"
                android:layout_weight="8"
                tools:srcCompat="@drawable/restaurantstockimage" />

            <ImageButton
                android:id="@+id/btnImageRight"
                android:layout_width="wrap_content"
                android:layout_height="147dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_arrow_forward_ios_24" />

        </LinearLayout>

        <Button
            android:id="@+id/btnNewlyAddedItems"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/txtNewlyAddedItems"
            android:textAlignment="center"
            android:textSize="16sp"
            app:icon="@drawable/doublechevronright"
            app:iconGravity="end"
            app:iconSize="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgNewItem1"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    app:srcCompat="@drawable/baseline_image_24" />

                <Button
                    android:id="@+id/btnNewItem1"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgNewItem2"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    app:srcCompat="@drawable/baseline_image_24" />

                <Button
                    android:id="@+id/btnNewItem2"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Button" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnImageLeft"
                android:layout_width="86dp"
                android:layout_height="147dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/doublechevronleft" />

            <TextView
                android:id="@+id/txtReviewBox"
                android:layout_width="0dp"
                android:layout_height="147dp"
                android:layout_weight="8"
                android:textAlignment="center"
                android:textSize="34sp"
                tools:text="@string/txtReview" />

            <ImageButton
                android:id="@+id/btnImageRight"
                android:layout_width="47dp"
                android:layout_height="147dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/doublechevronright" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnHome"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txtHome" />

            <Button
                android:id="@+id/btnMenu"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txtMenu" />

            <Button
                android:id="@+id/btnFeedback"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txtFeedback" />

            <Button
                android:id="@+id/btnInfo"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txtInformation" />

            <Button
                android:id="@+id/btnCalculator"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txtCalculator" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>